# zhi_shang

code/app/sdk/include/: sdk_common.h  sdk_mgr.h
code/app/sdk/prj_win32/: app_sdk.vcxproj  app_sdk.vcxproj.filters
code/app/sdk/source/: sdk.cpp  sdk_mgr.cpp
code/application/app_protocol/include/: app_protocol_common.h  application_proto_swap.h  application_struct.pb.h  general_proto_swap.h  general_struct.pb.h
code/application/app_protocol/prj_win32/: app_protocol.vcxproj  (+1 more)
code/client/app_protocol/: readme.txt
code/include/adpt/: adpt.h  svr_adpt.h
code/include/common/: common_define.h  common_error.h  common_tool.h  data_type.h  link_lib.h
code/include/conf/: conf.h
code/include/log/: log.h
code/include/logic/: logic.h
code/include/mem_pool/: mem_pool.h
code/include/msg_mgr/: msg_mgr.h  msg_mgr_imp.h  msg_transmit.h
code/include/network/: net_msg.h  net_msg_layer.h  net_node_id_layer.h  network_mgr.h
code/include/sdk/: sdk.h  sdk_mgr.h  sdk_protocol.h
code/include/session_mgr/: session_mgr.h
code/include/sub/: sub_msg_handler.h  subscriber.h  subscriber_imp.h  subscribers_map.h
code/include/subscriber/: sub_msg_handler.h  subscriber.h  subscriber_imp.h  subscribers_map.h
code/server/main/linux/: CMakeLists.txt
lib/win32/Debug/: app_protocol_2010_d.lib
script/bat/: copy_exe_result_win32.bat  copy_lib_result_win32.bat
script/python/protobuf/: create_application_proto_file.py  create_general_proto_file.py  create_proto_file.py
tools/: cmake.txt  cmake.txt.bak  git.txt  log.txt  protobuf.rar
tools/stress_test/: 1000.xml
(+203 files in other folders)
